--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -104,9 +104,38 @@
     flex: 1;
 
     cursor: pointer;
+
+    position: relative;
 }
 
-.NavbarContainer .rightSideBar li :hover{ 
+.userInfoAvatar{
+    display: flex;
+    margin-left: 1px;
+    flex: 1;
+
+    cursor: pointer;
+
+    position: relative;
+}
+
+.floatMenuAvata{
+
+    position: absolute;
+    top: 30px;
+    right: 5px;
+
+    background-color: #fff;
+    width: 11rem; 
+
+    border: 1px solid #e4e8ec ;
+
+    border-radius: 10px;
+
+    display: none;
+
+}
+
+.NavbarContainer .rightSideBar li , .userInfoAvatar :hover{ 
     color: #9c9c9c; 
 }
 
@@ -116,5 +145,6 @@
     border: 1px solid gray;
     border-radius: 50%;
 }
+
 
  
