--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -5,12 +5,15 @@
 .mainContainer{
   width: 100%;
   display: flex;
+  height: 100%;
+
 }
 
 
 .middle{
   width: 78%; 
   background-color: #f6f8fa;
+  height: 100%;
   
   display: flex;
 }
@@ -36,6 +39,14 @@
 }
 
 .exploreMain{
-  width: 27%; 
+  width: 24%; 
   padding: 2rem 0 ;
+}
+
+.exploreMain >p{
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: .001px;
+  margin-bottom: 5px;
+
 }
