--- a/src/styles/pages/profile.module.css
+++ b/src/styles/pages/profile.module.css
@@ -21,14 +21,14 @@
     justify-content: center;
 
     text-align: center;
-    font-size: .9rem;
+    font-size: 14px;
     font-weight: 400;
     color: #737C85;
 }
 
 .profileContainer article nav ul li a{
     margin-left: 4px; 
-    color: #5f676e;   
+    color: #24292f;   
 }
 
 .profileContainer article nav ul li::before{
@@ -57,24 +57,23 @@
 }
 
 .profileContainer aside{
-    width: 20%; 
+    width: 33%; 
     background-color: #ffff;
 
 }
 
 .profileContainer aside .leftSideProf {
     position: absolute;
-    width: 16rem;
+    width: 20rem;
     height: 100%; 
     top: 6rem;
-    left: 2.6rem;
-    background-color: #ffff;
+    left: 11.6rem; 
 }
 
 
 .profileContainer aside .leftSideProf >img {
-    width: 15rem;
-    height: 15rem;
+    width: 19rem;
+    height: 19rem;
     border-radius: 50%;
     border: 1px solid yellow;
     margin-bottom: 15px;
@@ -94,23 +93,24 @@
 
 .profileContainer aside .leftSideProf #bios{
     font-size: 1rem;
+    font-weight: 400;
     line-height: 30px;
-    color: #35373a;
+    color: #24292f;
 }
 
 .profileContainer aside .leftSideProf #btnEdit {
     width: 100%;
-    height: 1.8rem;
+    height: 2rem;
     border-radius:5px ;
     border: 1px solid #c7cbcf;
     background-color: #F6F8FA;
-    color: #636a72;
-    font-size: .85rem;
+    color: #474c52;
+    font-size: .85rem; 
 }
 
 .profileContainer aside .socialInfo{
     display: flex;
-    margin-top: 10px;
+    margin: 15px 0 16px 0;
     line-height: 30px;
     font-size: .85rem; 
 }
@@ -119,19 +119,20 @@
     display: flex;
     align-items: center;
     margin-right: 10px;
+    font-size: 14px;
+    color: #636a72;
 }
 
 .profileContainer aside .socialInfo p strong {
     margin: 0 4px;
+    color: #24292f;
+
 }
 
 .profileContainer aside .userMoreInfo > p{
     display: flex;
     align-items: center;    
-
-    text-indent: 10px;
-    line-height: 23px;
-    color: #515558;
-    font-size: .9rem;
-    background-color: #737C85;
+    line-height: 25px;
+    color: #24292f;
+    font-size: .9rem; 
 }
